# CDM_Capacitive_Shape_Sensing_ROS2

./: CMakeLists.txt  README.md  package.xml  setup.py
doc/move_group_interface/: CMakeLists.txt
doc/move_group_interface/launch/: move_group.launch.py  move_group_interface_tutorial.launch.py
doc/move_group_interface/src/: CMakeCache.txt  move_group_interface.cpp
doc/planning_scene/src/: planning_scene_tutorial.cpp
doc/realtime_servo/src/: servo_cpp_interface_demo.cpp
launch/: view_snake_tool.launch.py
rviz/: view_snake.rviz
snake_arduino/AD7747_Arduino/: AD7747_Arduino.ino  README.md  SetupFunc.ino
snake_bend_gui/: snake_bend_capa_mapper.py
snake_capa_msg/: CMakeLists.txt  package.xml
snake_capa_publisher/: package.xml  setup.cfg  setup.py
snake_capa_publisher/config/: snake1.yaml  snake2.yaml  snake3.yaml  snake4.yaml
snake_capa_publisher/launch/: snake_param.launch.py
snake_capa_publisher/snake_capa_publisher/: jointstate_publisher_capa_mapper.py  publisher_capa_sensor.py
snake_control/: snake_control.py  snake_sensor.py
snake_control/snake_rtos_control/: snake_rtos_control.ino
snake_description/: setup.py
snake_description/launch/: view_snake_tool.launch.py
snake_detection/: package.xml  setup.cfg  setup.py
snake_detection/snake_shape_detection/: detection_node.py  util.py
snake_param_reader/: package.xml  setup.cfg  setup.py
snake_param_reader/config/: param.yaml  snake1.yaml
snake_param_reader/snake_param_reader/: param_node.py
urdf/: initial_positions.yaml  snake.urdf.xacro  snake_tool.srdf  snake_tool_controller.yaml
(+1 files in other folders)
